# rust-shmem

./: Cargo.toml  README.md
examples/: reader.rs  writer.rs
src/: error.rs  lib.rs  map.rs  map_mut.rs  map_ref.rs  object.rs
src/array/: mod.rs  mutable.rs  owned.rs  reference.rs
src/map/: mod.rs  mutable.rs  owned.rs  reference.rs
